# tffrs-prediction

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: get_athlete_data.py  get_school_data.py
