[tool.poetry]
name = "tffrs-prediction"
version = "0.1.0"
description = "Venv for tfrrs prediction project"
authors = ["micahbenson <a.benson@wustl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
